# substrate-api-client-test-node

node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
runtime/src/: lib.rs
