[package]
name = "node-template"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { tag = "monthly-2021-08", version = "0.10.0-dev", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sp-core = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { tag = "monthly-2021-08", version = "0.10.0-dev", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sc-service = { tag = "monthly-2021-08", version = "0.10.0-dev", features = ["wasmtime"],  git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-inherents = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.1.0"
sc-rpc = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-api = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { tag = "monthly-2021-08", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking-cli = { tag = "monthly-2021-08", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

node-template-runtime = { version = "3.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { tag = "monthly-2021-08", version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
