[package]
name = "node-template"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
description = "A fresh FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { branch = "master", version = "0.10.0-dev", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sp-core = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-executor = { branch = "master", version = "0.10.0-dev", features = ["wasmtime"], git = "https://github.com/paritytech/substrate.git" }
sc-service = { branch = "master", version = "0.10.0-dev", features = ["wasmtime"],  git = "https://github.com/paritytech/substrate.git" }
sc-telemetry = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-keystore = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-transaction-pool-api = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-transaction-pool = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus-aura = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus-aura = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-consensus = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-consensus = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-finality-grandpa = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-finality-grandpa = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-client-api = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-timestamp = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "18.0.0"
sc-rpc = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-api = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-rpc-api = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-blockchain = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-block-builder = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sc-basic-authorship = { branch = "master", version = "0.10.0-dev", git = "https://github.com/paritytech/substrate.git" }
substrate-frame-rpc-system = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
pallet-transaction-payment-rpc = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking-cli = { branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

node-template-runtime = { version = "3.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { branch = "master", version = "3.0.0", git = "https://github.com/paritytech/substrate.git" }

[features]
default = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
