[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
name = 'pallet-template'
version = "3.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"
description = "FRAME pallet template for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = [
	"derive",
] }
frame-support = { default-features = false, branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-system = { default-features = false,  branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
frame-benchmarking = { default-features = false,  branch = "master", version = "4.0.0-dev", optional = true, git = "https://github.com/paritytech/substrate.git" }

[dev-dependencies]
sp-core = { default-features = false, branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-io = { default-features = false, branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { default-features = false, branch = "master", version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }

[features]
default = ['std']
std = [
	'codec/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
]

runtime-benchmarks = ["frame-benchmarking"]
try-runtime = ["frame-support/try-runtime"]
